@@ -54,6 +54,9 @@ namespace aux {
 		constexpr open_mode_t executable = 7_bit;
 		constexpr open_mode_t allow_set_file_valid_data = 8_bit;
 		constexpr open_mode_t no_mmap = 9_bit;
+		// sets the FS_NOCOW_FL flag on the file, when creating it.
+		// This is currently linux specific, for btrfs filesystems
+		constexpr open_mode_t no_cow = 10_bit;
 	}
 } // aux
 
