@@ -240,6 +240,7 @@ constexpr int DISK_WRITE_MODE = settings_pack::enable_os_cache;
 		SET(enable_set_file_valid_data, false, nullptr),
 		SET(socks5_udp_send_local_ep, false, nullptr),
 		SET(proxy_send_host_in_connect, false, nullptr),
+		SET(disk_disable_copy_on_write, true, nullptr),
 	}});
 
 	CONSTEXPR_SETTINGS
